# json-rpc-xmr

./: CMakeLists.txt  README.md  main.cpp
ext/: CMakeLists.txt
src/: CMakeLists.txt  tools.h
src/jsonrpc/: CMakeLists.txt  MyStubServer.cpp  MyStubServer.h  abstractstubserver.h  spec.json  stubclient.h
